--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* General Styles */
 * {
     margin: 0;
     padding: 0;
@@ -28,10 +27,14 @@
     align-items: center;
     padding: 15px 30px;
     background-color: #1e1e1e;
+
+    color: rgba(255, 255, 255, 0.8); /* Subtle white text */
+    backdrop-filter: blur(5px); /* Optional: adds slight blur effect */
     box-shadow: 0 2px 10px rgba(46, 232, 62, 0.4);
-    position: sticky;
+    transition: background-color 0.3s ease-in-out;
+    position: fixed;
     top: 0;
-    z-index: 1000;
+    /* z-index: 0; */
   }
   
   .logo {
